test/libsolidity/syntaxTests/nameAndTypeResolution/343_integer_and_fixed_interaction.sol
contract test {
    function f() public {
        ufixed a = uint64(1) + ufixed(2);
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
